# ChangeLog for app-forensics/lynis
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-forensics/lynis/ChangeLog,v 1.47 2014/04/19 11:50:37 idl0r Exp $

  19 Apr 2014; Christian Ruppert <idl0r@gentoo.org> lynis-1.3.0.ebuild,
  lynis-1.5.0-r1.ebuild:
  Fix HOMEPAGE and SRC_URI to pont to http://cisofy.com/lynis/

*lynis-1.5.0-r1 (11 Apr 2014)

  11 Apr 2014; Christian Ruppert <idl0r@gentoo.org> -lynis-1.5.0.ebuild,
  +lynis-1.5.0-r1.ebuild:
  Revbump. Make default perms more strict, bug 507436

*lynis-1.5.0 (10 Apr 2014)

  10 Apr 2014; Christian Ruppert <idl0r@gentoo.org> -lynis-1.4.9.ebuild,
  +lynis-1.5.0.ebuild:
  Version bump.

*lynis-1.4.9 (03 Apr 2014)

  03 Apr 2014; Christian Ruppert <idl0r@gentoo.org> -lynis-1.4.8.ebuild,
  +lynis-1.4.9.ebuild:
  Version bump

*lynis-1.4.8 (27 Mar 2014)

  27 Mar 2014; Christian Ruppert <idl0r@gentoo.org> -lynis-1.4.7.ebuild,
  +lynis-1.4.8.ebuild:
  Version bump

*lynis-1.4.7 (21 Mar 2014)

  21 Mar 2014; Christian Ruppert <idl0r@gentoo.org> -lynis-1.4.6.ebuild,
  +lynis-1.4.7.ebuild:
  Version bump

*lynis-1.4.6 (14 Mar 2014)

  14 Mar 2014; Christian Ruppert <idl0r@gentoo.org> -lynis-1.4.5.ebuild,
  +lynis-1.4.6.ebuild:
  Version bump

*lynis-1.4.5 (10 Mar 2014)

  10 Mar 2014; Christian Ruppert <idl0r@gentoo.org> -lynis-1.4.4.ebuild,
  +lynis-1.4.5.ebuild:
  Version bump

*lynis-1.4.4 (07 Mar 2014)

  07 Mar 2014; Christian Ruppert <idl0r@gentoo.org> -lynis-1.4.3.ebuild,
  +lynis-1.4.4.ebuild:
  Version bump

*lynis-1.4.3 (25 Feb 2014)

  25 Feb 2014; Christian Ruppert <idl0r@gentoo.org> -lynis-1.4.2.ebuild,
  +lynis-1.4.3.ebuild:
  Version bump

*lynis-1.4.2 (21 Feb 2014)

  21 Feb 2014; Christian Ruppert <idl0r@gentoo.org> -lynis-1.4.1.ebuild,
  +lynis-1.4.2.ebuild:
  Bump

*lynis-1.4.1 (18 Feb 2014)

  18 Feb 2014; Christian Ruppert <idl0r@gentoo.org> -lynis-1.3.9.ebuild,
  -lynis-1.4.0.ebuild, +lynis-1.4.1.ebuild:
  Bump

*lynis-1.4.0 (29 Jan 2014)
