@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-forensics/lynis/lynis-1.5.0-r1.ebuild,v 1.2 2014/04/19 11:50:37 idl0r Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-forensics/lynis/lynis-1.5.1.ebuild,v 1.1 2014/04/24 19:48:59 idl0r Exp $
 
 EAPI="5"
 
