@@ -6,5 +6,5 @@ KEYWORDS=~amd64 ~x86
 LICENSE=GPL-3
 RDEPEND=app-shells/bash
 SLOT=0
-SRC_URI=http://cisofy.com/files/lynis-1.5.0.tar.gz
-_md5_=e26957451247404b4205dec95244a474
+SRC_URI=http://cisofy.com/files/lynis-1.5.1.tar.gz
+_md5_=1af3a36a8b985f1e322dfff693e5c4f9
