@@ -6,14 +6,14 @@ AUX kmod-static-nodes 584 SHA256 078b07581e63b5113cef9e85da7d5b53e1fbad91d793f7f
 DIST kmod-16.tar.xz 1440880 SHA256 63412efab37c70459ccef167556965c93fd4f56af5986cd3750542a684c613c5 SHA512 326921bb184d53840837cc600f6301b948031ef7c2048e46ef16bc26ef7b967fa3c20cb133b1ebbddcf8a8537e9af8166fbca6a28d94f694f12ce1d89361a1bc WHIRLPOOL 625c277d7733a344040eaaeca26ce103d79c96ca1ba7759302e5fd573bba86285420c6f599a70411e7732e22145108afadbc29606d9f8fc62fe94479480f3a3f
 DIST kmod-17.tar.xz 1484336 SHA256 3ba7470041de04ca88308f501901b574169cb517d3192397074611b3921a2dfa SHA512 2b237a96b8bcfe03bde30d4f8b6886f8ec33817cc6f0fe810f6f382310bd71814236b299b9051304ca5a9b29c205d8e1ba5a15bf6ee98648644ac268dc368294 WHIRLPOOL 421f95e48da7baf40617c9222d4cc26868d26dbf51f77aa2613cfe5cf7a84b5489eca4611fe86108135c164890eeab32916836776561ab8f2541aa10456d1095
 EBUILD kmod-16.ebuild 3791 SHA256 be36a499e17190ab608b19706978477063d3c6295700838d613504000014bf20 SHA512 a2a237b0f0c95852c64030bae807c9501da448f9c7a2858b1bbbbda5a347b2dbeb473d941f91a28ee7eb2083814f17fa6aefb9081038c771ff658c97d4195852 WHIRLPOOL d7dafcabc14d2195f61dced5724c1de14eaa57770af51c40e1daf1224c6e32dee995a2ba9f0be5185c1de91acf6e3eab83c2a82dc39e2216cd41e6d041623432
-EBUILD kmod-17.ebuild 5123 SHA256 89490b38d0edb53cbab287b3152d67fd4e71c0b0c1fadc6bbc25c3085da454b0 SHA512 6aad5f49a02bba72ef5c985181e2c58495ddeb06776323a7291831bd5dcd92f93a428498f9c725b7300b9fa44b934785f10ba4f3262bea64edde88ef1a020aca WHIRLPOOL aafd9706039fb72046bdbb99a91d75ff4e2ee1f4611f70e16442f9dcb2bb52f39eeadbefbbe3521eb8830272c9ea20d4328f1c446de7272dc6a272cd5935cf2c
-EBUILD kmod-9999.ebuild 5126 SHA256 aa4caf09601cee4f4acb131a2c29f6a8fbf297c47734b2fa2216025ce1e1feae SHA512 fa24c64d77a93e9e778ac16b68390fdf5d89bce4832013302e580de4bc3e361112b161f3c98f6a84d3d9c5b7731a80e7118b30716cc347b103830d17a29cdb9c WHIRLPOOL 31d3cd0c92f847a8949e4474da2f38c7deceb55d40d7bc7aecda607759abca3e5ce8c0ed73b3fe9f00776fda852cd189bad15071a55696f2dad8d886521c93b3
-MISC ChangeLog 21042 SHA256 b9fc8a965446626b4505486f8fcc3eaf7b0ac806ad62a92cafa2362279b576e9 SHA512 99f068a254e8b3966df12bbfdebd50f797ddca5923275a53d6628990a0219a82eb48d42ea7bdea454fe0cfde1e7ee31ba990b9f78c9833b7894dee30e3237fcf WHIRLPOOL 383c4182f48e03b9bdb8c509879b54e810a5b3880766e85e3e8bf0cd0c7017c3374f77bafff03638859c48bfeddab00d0e7af95d5b0aa62b3ec9ffd38878b366
+EBUILD kmod-17.ebuild 5132 SHA256 d939d833558801a0c2eee50f73a9e5891fb14e258f6afd43f5527438018deef7 SHA512 0cdfe6159a4c1be619e8458bc4c9b92aa043673f7ab1fe2ae7cbb1f8928cf8389e7c6f71044e330440ed41ac23fbe30de876596149e060d74fa4ee1e262fc3e8 WHIRLPOOL f1e239fe30be9312257cd2af8d97320fda3eb04e62ab8b2ebbbf2a9baca1a13014627e672c3e438242e9ebf2c80e8c01a7c648c7c7572ffb5b4904938ccb5eb3
+EBUILD kmod-9999.ebuild 5135 SHA256 3302c13cbb789a35a7aa76dd3a42d1c5ef6a531985316db36206b0fd1a329f73 SHA512 cf44f4528ea193773c6cf9be86900b256bad34e9f70bcb35c1e5445d4520c27ea89b055dd853b6b5597d3bb6e3869a1712aab189eb16e62953d28f46450a5f8f WHIRLPOOL f812e9acad1be5b86749cbafe8e75f5f5e527e9a503030d324b6c1799ce6e51aec1dca9844d14442ea905e3783fb46a10c81d850f7188e24b51f679f0ba1471a
+MISC ChangeLog 21188 SHA256 2b17d7019e3436c11e8b20f092f1bee6791a7ba8c5cb08948e61512e7683878e SHA512 e7efd0ea236de9bbb01b337b2efb66b7bf7871a39d09a03d5ff2a4eab5f00cb2cd06a7a17a822fde1cdb17606b122f5ed721a684f2f0b21c40292d2c376a8b3e WHIRLPOOL 71d1dee6617df545ef3fdd32c18a5d5738896a403dbff4c3893d0dbb23749dedb4007622c22bc65ba3fca840038406e6e2dc70d5985b9a1d821f5d07799f1997
 MISC metadata.xml 376 SHA256 5eb64ba82d456033efa6947dff12b009f73f4e5b4e883841c7fb4c8a368b3e0c SHA512 7dd59b5c777f37c5aa734a81562491ab90e0ed2854340f4d89fd9198d17c8e8d880e8d47ae99dba23b1fb16bc0b711788b7159f77ff53b08a2b2a3af01894f43 WHIRLPOOL d659931a7f525e0453e86a96f2dd6ca889bcf428496f1510bb612251961dac7afa5c36b87f90947371f4903c84b5cabf42d7647cfbbbf7af3e24396107a7197f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlNZH08ACgkQblQW9DDEZTg5DgCaA7QBuKYDzvaLu8V7A+2/lg+e
-UH4An1oU2UtTRIMSZCdL99x+cfN4Hx+5
-=mBOX
+iF4EAREIAAYFAlNZa4IACgkQC77qH+pIQ6QsJQD/SeMqcvjpc2bY5GY4oe4QZNtx
+Vbphl8ZthPDSWm+yV5AA/AiabsU1RbH55VjIPAKw14cIho1mWGYHtGBwF0ti3RnX
+=dGop
 -----END PGP SIGNATURE-----
