@@ -1,6 +1,12 @@
 # ChangeLog for app-forensics/lynis
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-forensics/lynis/ChangeLog,v 1.47 2014/04/19 11:50:37 idl0r Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-forensics/lynis/ChangeLog,v 1.48 2014/04/24 19:48:59 idl0r Exp $
+
+*lynis-1.5.1 (24 Apr 2014)
+
+  24 Apr 2014; Christian Ruppert <idl0r@gentoo.org> -lynis-1.5.0-r1.ebuild,
+  +lynis-1.5.1.ebuild:
+  Version bump
 
   19 Apr 2014; Christian Ruppert <idl0r@gentoo.org> lynis-1.3.0.ebuild,
   lynis-1.5.0-r1.ebuild:
